[gd_scene load_steps=8 format=3 uid="uid://ch0p2t3qoy1t7"]

[ext_resource type="Theme" uid="uid://biyqmiasgolv4" path="res://assets/style/theme/main.tres" id="1_fe2o3"]
[ext_resource type="FontFile" uid="uid://cs3mrrm80g1ne" path="res://assets/style/SpaceMono-Regular.ttf" id="1_sl1te"]
[ext_resource type="Script" uid="uid://c0stc6rf4110e" path="res://scripts/ui/main_menu.gd" id="2_1g8jr"]
[ext_resource type="StyleBox" uid="uid://dder5j202v8pm" path="res://assets/style/theme/overlay.tres" id="4_x2yvf"]
[ext_resource type="Script" uid="uid://c15bjj4iwxf3q" path="res://scripts/ui/overlay_container.gd" id="5_uhagc"]
[ext_resource type="PackedScene" uid="uid://cccppvlljl7a5" path="res://scenes/ui/settings/settings.tscn" id="5_x2yvf"]

[sub_resource type="LabelSettings" id="LabelSettings_87aya"]
font = ExtResource("1_sl1te")
font_size = 80
font_color = Color(0, 1, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fe2o3")
script = ExtResource("2_1g8jr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Astro"
label_settings = SubResource("LabelSettings_87aya")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Play" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play
"

[node name="Options" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("1_fe2o3")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer2/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2/VBoxContainer/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/VBoxContainer/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "Exit"

[node name="SettingsPanel" type="PanelContainer" parent="." node_paths=PackedStringArray("child")]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_x2yvf")
script = ExtResource("5_uhagc")
child = NodePath("Settings")

[node name="Settings" parent="SettingsPanel" instance=ExtResource("5_x2yvf")]
visible = false

[connection signal="focus_entered" from="VBoxContainer/MarginContainer2/VBoxContainer/Play" to="." method="on_hover"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="focus_entered" from="VBoxContainer/MarginContainer2/VBoxContainer/Options" to="." method="on_hover"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="VBoxContainer/MarginContainer2/VBoxContainer/Exit" to="." method="on_hover"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
